--- a/imc/package.json
+++ b/imc/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint-config-trybe-backend": "^2.1.0"
+    "eslint-config-trybe-backend": "^2.1.0",
+    "readline-sync": "1.4.10"
   }
 }
